chore: 아키텍처 구조 설정 (#8)
* chore: ui 내부 패키지 제거 (#7)

* chore: packages/fds 폴더 구성 (#7)

* chore: apps/webs 내 @repo/ui 제거 및 @repo/fds 추가 (#7)

* chore: apps/web 폴더 구조 설정 (#7)

--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "@repo/ui",
+  "name": "@repo/fds",
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./components": "./src/components/index.ts",
+    "./theme": "./src/theme/styles.css"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@turbo/gen": "^2.5.0",
+    "@repo/tailwind-config": "workspace:*",
     "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.25.0",
-    "typescript": "5.8.2"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "typescript": "5.8.2",
+    "tailwindcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.5",
+    "postcss": "^8.5.3"
   }
 }
