--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@repo/fds": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.5",
     "next": "^15.3.0",
