--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -40,5 +40,12 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.509.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.9"
   }
 }
