feat: fds, tailwind 내부 패키지 재설정 및 Button 컴포넌트 추가 (#20)
* chore: @radix-ui/react-slot 추가 (#19)

* chore: color 디자인 토큰 값 OKLCH -> HEX 재변경 및 typography 유틸리티 클래스 변경 (#19)

* chore: tailwind-config/package.json 변경 (#19)

* chore: fds/components.json 변경 (#19)

* chore: fds의 exports를 dist 경로로 변경하고 build/dev 스크립트 추가 (#19)

* feat: Button 컴포넌트 추가 (#19)

* feat: Button 컴포넌트 스토리 추가 (#19)

* feat: Icon 컴포넌트 스토리 수정 (#19)

* chore: chromatic 배포 워크플로우 수정 (#19)

--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -2,7 +2,11 @@
   "name": "@repo/tailwind-config",
   "version": "0.0.0",
   "private": true,
+  "exports": {
+    "./postcss": "./postcss.config.mjs"
+  },
   "peerDependencies": {
-    "tailwindcss": "^4.0"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5"
   }
 }
