--- a/packages/fds/components.json
+++ b/packages/fds/components.json
@@ -13,7 +13,7 @@
   "aliases": {
     "components": "@/components",
     "ui": "@/components/ui",
-    "utils": "@/utils",
+    "utils": "@/lib/utils",
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
