--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./components": "./src/components/index.ts",
-    "./theme": "./src/theme/styles.css"
+    "./components": "./dist/components/index.js",
+    "./theme": "./dist/index.css"
   },
   "scripts": {
+    "build:styles": "tailwindcss -i ./src/theme/styles.css -o ./dist/index.css",
+    "build:components": "tsc",
+    "dev:styles": "tailwindcss -i ./src/theme/styles.css -o ./dist/index.css --watch",
+    "dev:components": "tsc --watch",
     "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
@@ -24,14 +28,13 @@
     "@storybook/react": "^8.6.12",
     "@storybook/react-webpack5": "^8.6.12",
     "@storybook/test": "^8.6.12",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/cli": "^4.1.8",
     "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "chromatic": "^11.28.2",
     "eslint": "^9.25.0",
     "eslint-plugin-storybook": "^0.12.0",
-    "postcss": "^8.5.3",
     "storybook": "^8.6.12",
     "tailwindcss": "^4.1.5",
     "typescript": "5.8.2"
@@ -42,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
