--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.4.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
@@ -45,11 +46,16 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
+    "react-hook-form": "^7.59.0",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.9"
+    "tw-animate-css": "^1.2.9",
+    "zod": "^3.25.67"
   }
 }
