--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build:styles": "tailwindcss -i ./src/theme/styles.css -o ./dist/index.css",
-    "build:components": "tsc",
+    "build:components": "tsc && tsc-alias",
     "dev:styles": "tailwindcss -i ./src/theme/styles.css -o ./dist/index.css --watch",
     "dev:components": "tsc --watch",
     "lint": "eslint . --max-warnings 0",
@@ -38,6 +38,7 @@
     "eslint-plugin-storybook": "^0.12.0",
     "storybook": "^8.6.12",
     "tailwindcss": "^4.1.5",
+    "tsc-alias": "^1.8.16",
     "typescript": "5.8.2"
   },
   "eslintConfig": {
