--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "@types/react-window": "^1.8.8",
     "chromatic": "^11.28.2",
     "eslint": "^9.25.0",
     "eslint-plugin-storybook": "^0.12.0",
@@ -50,12 +51,15 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
     "react-hook-form": "^7.59.0",
+    "react-window": "^1.8.11",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.9",
     "zod": "^3.25.67"
