--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -60,8 +60,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
+    "next-themes": "^0.4.6",
     "react-hook-form": "^7.59.0",
     "react-window": "^1.8.11",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.9",
     "zod": "^3.25.67"
