--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -60,6 +60,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.509.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.59.0",
