--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -50,7 +50,6 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
@@ -68,6 +67,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.9",
+    "vaul": "^1.1.2",
     "zod": "^3.25.67"
   }
 }
