--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,16 +11,28 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@hookform/resolvers": "^5.1.1",
     "@repo/fds": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.5",
+    "@use-funnel/browser": "^0.0.15",
+    "date-fns": "^4.1.0",
+    "graphql": "^16.11.0",
     "next": "^15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.5"
+    "react-hook-form": "^7.59.0",
+    "tailwindcss": "^4.1.5",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.3",
+    "@hookform/devtools": "^4.4.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.14.0",
