--- a/packages/fds/package.json
+++ b/packages/fds/package.json
@@ -8,6 +8,7 @@
     "./lib": "./dist/lib/utils.js"
   },
   "scripts": {
+    "build": "pnpm build:styles && pnpm build:components",
     "build:styles": "tailwindcss -i ./src/theme/styles.css -o ./dist/index.css",
     "build:components": "tsc && tsc-alias",
     "dev:styles": "tailwindcss -i ./src/theme/styles.css -o ./dist/index.css --watch",
